# anti-uav410

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CODE_ANALYSIS_REPORT.md  DATASET_README.md  Dockerfile  PROJECT_INDEX.json  PROJECT_INDEX.md  README.md  cvat_converter.py  demo_ui.py  pyproject.toml  run_train.py
.github/workflows/: ci.yaml
Codes/: demo_detect_track.py  detect_tracking.py  readme.txt
Codes/detect_wrapper/: Detectoruav.py  test_drone.py  train_drone.py
Codes/detect_wrapper/.github/ISSUE_TEMPLATE/: --bug-report.md
Codes/detect_wrapper/models/: common.py  detect_model.py  experimental.py  export.py
Codes/detect_wrapper/utils/: datasets.py  general.py  google_utils.py  loss.py  metrics.py  torch_utils.py
Codes/tracking_wrapper/: runtracker.py  tracker_check.py  tracker_test.py
Codes/tracking_wrapper/drtracker/: fhog.py
Eval/: siamfc.py  test.py
anti_uav_jittor/: demo.ipynb
anti_uav_jittor/anti_uav410_jit/: Demo_for_tracking.py  Demo_for_visual_comparison.py  Evaluation_for_ALL.py  Evaluation_for_SA.py
anti_uav_jittor/anti_uav410_jit/datasets/: __init__.py  antiuav410.py
anti_uav_jittor/anti_uav410_jit/experiments/: __init__.py  anti_uav.py
anti_uav_jittor/anti_uav410_jit/trackers/SiamDT/: detection_test_demo.py  init_paths.py  tracking_test_demo.py  tracking_train_demo.py
anti_uav_jittor/anti_uav410_jit/trackers/SiamFC/: siamfc.py
anti_uav_jittor/anti_uav410_jit/utils/: image.py  metrics.py  trackers.py  viz.py
anti_uav_jittor/anti_uav_edtc_jit/tracking/: _init_paths.py  analysis_results_ITP.py  create_default_local_file.py  evaluate_antiuav_performance.py  pre_read_datasets.py  profile_model.py  test.py  train.py  video2imgs.py  video_demo.py
anti_uav_jittor/anti_uav_edtc_jit/yolov5/: benchmarks.py  detect.py  export.py  train.py  tutorial.ipynb  val.py
anti_uav_jittor/anti_uav_edtc_jit/yolov5/classify/: predict.py  train.py  tutorial.ipynb
anti_uav_jittor/anti_uav_edtc_jit/yolov5/models/: common.py  experimental.py  tf.py  yolo.py
anti_uav_jittor/anti_uav_edtc_jit/yolov5/segment/: predict.py  train.py  tutorial.ipynb  val.py
anti_uav_jittor/anti_uav_edtc_jit/yolov5/utils/: __init__.py  augmentations.py  autoanchor.py  dataloaders.py  general.py  metrics.py  plots.py  torch_utils.py  triton.py
anti_uav_jittor/got10k_toolkit/: setup.py
anti_uav_jittor/got10k_toolkit/tests/: test_datasets.py  test_experiments.py  test_trackers.py  test_utils.py
anti_uav_jittor/got10k_toolkit/toolkit/: PLOT.py  evaluate_got.py  evaluate_lasot.py  evaluate_nfs.py  evaluate_otb.py  evaluate_tc128.py  evaluate_trackingnet.py  evaluate_uav123.py  plot_got.py  test_got.py  test_lasot.py  test_nfs.py  test_otb.py  test_tc128.py  test_trackingnet.py  test_uav123.py
anti_uav_jittor/got10k_toolkit/toolkit/datasets/: __init__.py  dtb70.py  got10k.py  lasot.py  nfs.py  otb.py  tcolor128.py  trackingnet.py  uav123.py  vid.py  vot.py
anti_uav_jittor/got10k_toolkit/toolkit/experiments/: __init__.py  dtb70.py  got10k.py  lasot.py  nfs.py  otb.py  tcolor128.py  trackingnet.py  uav123.py  vot.py
anti_uav_jittor/got10k_toolkit/toolkit/trackers/: __init__.py  identity_tracker.py  net_wrappers.py
anti_uav_jittor/got10k_toolkit/toolkit/utils/: ioutils.py  metrics.py
anti_uav_jittor/ltr/: __init__.py  run_training.py
anti_uav_jittor/ltr/actors/: __init__.py  base_actor.py  tracking.py
anti_uav_jittor/ltr/admin/: environment.py  loading.py  local.py  model_constructor.py  settings.py  tensorboard.py
anti_uav_jittor/ltr/dataset/: AntiFusion.py  Single_Anti.py  __init__.py  base_image_dataset.py  base_video_dataset.py  coco.py  coco_seq.py  davis.py  ecssd.py  got10k.py  hku_is.py  imagenetvid.py  lasot.py  lvis.py  msra10k.py  sbd.py  synthetic_video.py  synthetic_video_blend.py  tracking_net.py  vos_base.py  youtubevos.py
anti_uav_jittor/ltr/models/backbone/: Modal_backbone.py  base.py  resnet.py  resnet18_vggm.py  swin.py  transt_backbone.py
anti_uav_jittor/ltr/models/neck/: M2TR.py  (+6 more)
anti_uav_jittor/ltr/trainers/: base_trainer.py  ltr_trainer.py
anti_uav_jittor/pysot_toolkit/: test.py
anti_uav_jittor/pysot_toolkit/trackers/: net_wrappers.py  tracker.py
anti_uav_jittor/pytracking/: __init__.py  run_experiment.py  run_tracker.py  run_video.py  run_vot.py  run_webcam.py
anti_uav_jittor/pytracking/VOT/: vot.py
anti_uav_jittor/pytracking/analysis/: evaluate_vos.py  extract_results.py  playback_results.py  plot_results.py  vos_utils.py
anti_uav_jittor/pytracking/evaluation/: data.py  datasets.py  environment.py  got10kdataset.py  lasotdataset.py  local.py  mobifacedataset.py  multi_object_wrapper.py  nfsdataset.py  otbdataset.py  running.py  tpldataset.py  tracker.py  trackingnetdataset.py  uavdataset.py  vot.py  vot2020.py  votdataset.py
anti_uav_jittor/pytracking/experiments/: myexperiments.py
anti_uav_jittor/pytracking/features/: augmentation.py  color.py  deep.py  extractor.py  featurebase.py  net_wrappers.py  preprocessing.py  util.py
anti_uav_jittor/pytracking/libs/: complex.py  dcf.py  fourier.py  operation.py  optimization.py  tensordict.py  tensorlist.py
anti_uav_jittor/pytracking/notebooks/: analyze_results.ipynb
anti_uav_jittor/pytracking/util_scripts/: download_results.py  pack_got10k_results.py  pack_trackingnet_results.py
anti_uav_jittor/pytracking/utils/: __init__.py  convert_vot_anno_to_rect.py  load_text.py  loading.py  params.py  plotting.py  visdom.py
anti_uav_jittor/util/: box_ops.py  grad_cam.py  metrics.py  misc.py
docs/: TRAINING.md
scripts/: evaluate.py  export.py  infer.py  migrate_project.py  prepare_data.py  test.py  train.py
src/detection/: __init__.py  detect.py  detector.py
src/detection/models/: yolo.py
src/detection/utils/: datasets.py  general.py  google_utils.py  loss.py  metrics.py  torch_utils.py
src/evaluation/: __init__.py  bbox.py  eval.py  test_tracker.py
src/tracking/: __init__.py
src/tracking/drtracker/: __init__.py
tests/: __init__.py  conftest.py  test_prepare_data.py  test_training_smoke.py
weights/: drone_detector.pt
(+299 files in other folders)
